--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,8 +1,24 @@
-<form id="addProduct"  >
-    <div class="form-group">
-        <input type="text" class="form-control" placeholder="Product Name" >
-    </div>
-    <button class="btn btn-default" >
-      Add
-    </button>
-</form>
+
+<div class="container">
+    <h2>Add Product</h2>
+    <form #productForm ="ngForm">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="name" class="form-control ngModel" name="name" placeholder="Enter product Name" #pdtName ="">
+      </div>
+      <div class="form-group">
+        <label for="serial">Serial:</label>
+        <input type="name" class="form-control ngModel" name="serial" placeholder="Enter product Serial" #serial ="">
+      </div>
+      <div class="form-group">
+        <label for="price">Price:</label>
+        <input type="name" class="form-control ngModel" name="price" placeholder="Enter Price" #price ="">
+      </div>
+      <div class="form-group">
+      <br>
+      <button type="submit" class="btn btn-primary">Submit</button>
+      &nbsp;
+      <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
+      </div>
+    </form>
+  </div>
