--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,30 +1,19 @@
-<div class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" >My shoping Cart</a>
-      </div>
-  
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li>
-            <a [routerLink]="['']">Home</a>
-          </li>
-          <li>
-            <a [routerLink]="['/products']">Products</a>
-          </li>
-          <li>
-            <a [routerLink]="['/products/new']">Add Product</a>
-          </li>
-        
-        </ul>
-        <div class="navbar-header navbar-right">
-          <ul class="nav navbar-nav">
-            <li>
-              <a>Welcome John</a>
-            </li>
-          </ul>
-        </div>
-        
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['']">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/products']">Products</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/products/new']">Add Product</a>
+        </li>
+      </ul>
     </div>
-  </div>
+  </nav>
